manifests/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external
  labels:
    name: external
---
apiVersion: v1
kind: Namespace
metadata:
  name: internal
  labels:
    name: internal
